--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
   <script src="https://use.fontawesome.com/ee921ea183.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -20,23 +22,27 @@
                 </div>
                 <div class="panel-body">
                         <form id="search-form">
-                                <label for="news-input" font-weight="bold">Search Term:</label>
+                                <label for="news-input" font-weight="bold">Search Term:</label><br>
                                 <input type="text" id="news-input"><br>
-                                <label for="number-input" font-weight="bold">Number of Records to Retrieve:</label>
-                                <input type="text" id="news-input"><br>
-                          
+                                <label for="dropdown" font-weight="bold">Number of Records to Retrieve:</label><br>
+                                <select id="number-of-records">
+                                        <option value="1">1</option>
+                                        <option value="5">5</option>
+                                        <option value="10">10</option>
+                                        <option value="25">25</option>
+                                </select>
+                                <br>
+                                <label for="start-year" font-weight="bold">Start Year (Optional):</label><br>
+                                <input type="text" id="start-year"><br>
 
                                 <input id="add-search" type="submit" value="Search">
                               </form>
                 </div>
               </div>
 
-    <!-- Buttons will Get Dumped Dere -->
     <div id="buttons-view"></div>
 
     
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/javascript.js" type="text/javascript" >
     </script>
   </div>
