--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
   <script src="https://use.fontawesome.com/ee921ea183.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
         <div class="jumbotron">
-            <h1><i class="fa fa-newspaper-o" aria-hidden="true"></i>New York Times Search</h1>
+            <h1><i class="fa fa-newspaper-o" aria-hidden="true"></i> New York Times Search</h1>
               </div>
   <div class="container">
         <div class="panel panel-default">
@@ -33,12 +34,38 @@
                                 </select>
                                 <br>
                                 <label for="start-year" font-weight="bold">Start Year (Optional):</label><br>
-                                <input type="text" id="start-year"><br>
+                                <input id="start-year" type="number" min="1900" max="2018" value="1900"><br>
 
-                                <input id="add-search" type="submit" value="Search">
+                                <label for="end-year" font-weight="bold">End Year (Optional):</label><br>
+                                <input id="end-year" type="number" min="1900" max="2018" value="1900">
+                                <br><br>
+
+                                <button type="button" class="btn"><i class="fa fa-search" aria-hidden="true"></i></i> Search</button>
+
+                                <button type="button" class="btn"><i class="fa fa-trash" aria-hidden="true"></i> Clear Results</button>
                               </form>
                 </div>
               </div>
+
+              <div class="panel panel-default" id="articles-panel">
+                    <div class="panel-heading">
+                      <h3 class="panel-title"><i class="fa fa-list-alt" aria-hidden="true"></i> Top Headlines</h3>
+                    </div>
+                    <div class="panel-body">
+                            <div class="panel panel-default">
+                                <div class="panel-body" id="article-panel"><h3 class="article-number">1</h3><h3 class="article-headline">HEADLINE</h3>
+                                <p class="byline">By BYLINE</p>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="panel-body">
+                            <div class="panel panel-default">
+                                <div class="panel-body" id="article-panel"><h3 class="article-number">2</h3><h3 class="article-headline">HEADLINE</h3>
+                                <p class="byline">By BYLINE</p>
+                                </div>
+                            </div>
+                    </div>
+                </div>
 
     <div id="buttons-view"></div>
 
